--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,102 @@ body {
     margin: 0 auto;
 }
 
+
+/* 모달창 */
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .7);
+    z-index: 999999;
+
+}
+
+.modal-wrap {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    width: 400px;
+    height: 270px;
+    background-color: #0fc224;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.modal-txt {
+    position: relative;
+    display: block;
+    color: #fff;
+    /* font-weight: bold; */
+    font-size: 1.9rem;
+    font-family: 'GmarketSansMedium';
+    font-weight: 400;
+    line-height: 30px;
+    padding-top: 60px;
+    text-align: center;
+}
+
+.modal-txt::before {
+    content: '';
+    position: absolute;
+    left: 49%;
+    top: 23px;
+    transform: translateX(-50%);
+
+    display: block;
+    width: 18px;
+    height: 17px;
+    background: url('../images/modal_sprite.png') no-repeat;
+    background-position: 0px -28px;
+}
+
+.modal-txt em {
+    position: relative;
+    display: block;
+    font-size: 1.4rem;
+    color: rgb(220, 245, 161);
+    padding-top: 6px;
+    line-height: 22px;
+}
+
+.modal-txt b {
+    position: relative;
+    display: block;
+    padding-bottom: 5px;
+}
+
+.modal-close {
+    position: relative;
+    display: inline-block;
+
+    font-family: 'GmarketSansMedium';
+    color: rgb(247, 223, 193);
+    font-size: 1.4rem;
+    background-color: #7475c7;
+
+    line-height: 20px;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px 20px;
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 14px;
+
+    transition: background-color 0.4s;
+}
+
+.modal-close:hover {
+    background-color: #4c4ec0;
+}
+
+
 /* 패밀리사이트 */
 .family-wrap {
     position: fixed;
@@ -2685,6 +2781,10 @@ body {
     .sw-notice {
         width: 1100px !important;
     }
+
+    .sw-notice-control {
+        right: 60px;
+    }
 }
 
 
@@ -2775,6 +2875,9 @@ body {
 
     .notice-right {
         margin-top: 20px;
+    }
+    .notice-right::before {
+        height: 326px;
     }
     
     .sw-notice {
